--- a/_posts/2020-01-02-the-us-narrative-today.html
+++ b/_posts/2020-01-02-the-us-narrative-today.html
@@ -1575,107 +1575,107 @@ stories:
   domain: http://bigbeargrizzly.net/
   link: http://www.bigbeargrizzly.net/news/have-you-seen-daisy/article_4c89f128-2dbf-11ea-b8e6-47f8f1ad10e6.html
 images:
-- name: oldcabin-store-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-atari-asteroids.jpg
-- name: server-cloud-server-racks-clouds-feed-people.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-feed-people.jpg
-- name: old-granary-field-granaryfield-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-internet-numbers.jpg
-- name: rockingchair-rockingchair-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-smooth-ride.jpg
-- name: hollywood-building-hollywood-building-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-cinnamon-rolls.jpg
-- name: stalin-time-old-piano-playing-hospital.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-piano-playing-hospital.jpg
-- name: yosemite-yosemite-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-dark-rain.jpg
-- name: bf-skinner-light-rail-yellow-calif.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-light-rail-yellow-calif.jpg
-- name: diamondcreek-diamondcreek-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/diamondcreek-diamondcreek-still.jpg
-- name: store-on-corner-oldcabin-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-sand-paper.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-atari-missle.jpg
-- name: la-muse-face-eyes-open-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-face-eyes-open-statue.jpg
-- name: oldhotel-oldhotel-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-monet-one.jpg
-- name: mistywoods-babyfoot-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-gred-mash.jpg
-- name: old-house-oldhouse-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-post-modern.jpg
-- name: bf-skinner-seattle-waterfront-ferris-wheel.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-seattle-waterfront-ferris-wheel.jpg
-- name: catacombs-catacombs-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-crabapple.jpg
-- name: mediterranean-mediterranean-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-satan-red.jpg
-- name: old-church-oldchurch-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-diego-rivera1.jpg
-- name: art-museum-art-museum-gred-mash.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-gred-mash.jpg
-- name: bf-skinner-border-watching-cars.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-border-watching-cars.jpg
-- name: nyc-flag-nycflag-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-colorful-blocks.jpg
-- name: oldbarn-oldbarn-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-graham-sutherland.jpg
-- name: legal-statue-legalstatue-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-atari-asteroids.jpg
-- name: razorwire-DSC-0080-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dali-three.jpg
-- name: birdhouse-birdhouse-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-dali-two.jpg
-- name: oldcabin-store-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-cinnamon-rolls.jpg
-- name: sand-hand-sand-hand-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-nazi-poster.jpg
-- name: statue-of-liberty-front-view-statueofliberty-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-attack-planes.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-constitution.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-constitution.JPG
-- name: lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-colorful-blocks.jpg
-- name: adam-smith-adam-smith-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-alien-goggles.jpg
-- name: catacombs-catacombs-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-spagetti-accident.jpg
-- name: old-gas-pumps-oldgaspumps-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-mucha-mult.jpg
-- name: dragon-desert-desert-dragon-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-atari-missle.jpg
-- name: san-francisco-street-view-san-francisco-street-view-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-oily-mcoilface.jpg
-- name: fence-bw-fist.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-bw-fist.png
-- name: border-fence-border-fence-on-hill-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-monet-one.jpg
-- name: hollywood-building-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-clean-view.jpg
-- name: gears-4882162452-fa3126b38d-b-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-bright-sand.jpg
-- name: aws-s3-stories-new-49-127-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-49-127-800-500-0-max-0-1--1.jpg
-- name: razorwire-DSC-0080-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-gan-vogh.jpg
-- name: rockingchair-rockingchair-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purple-pond.jpg
-- name: copper-circuit-people-walking-down-street.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-people-walking-down-street.jpg
-- name: nazi-invasion-dinosaur-walking-desert.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-dinosaur-walking-desert.jpg
-- name: stories-sand-hand-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-sand-hand-dali-three.jpg
-- name: aws-s3-stories-new-17-88-800-500-0-max-0--5--5.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-17-88-800-500-0-max-0--5--5.jpg
-- name: gears-4882162452-fa3126b38d-b-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-kandinsky-bv.jpg
-- name: walled-garden-walled-garden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden.jpg
-- name: oldtrain-oldtrain-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-rainbow-festival.jpg
-- name: powerlines-power-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-atari-missle.jpg
+- name: stalin-time-nyc-skyline-from-ferry.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-nyc-skyline-from-ferry.jpg
+- name: machine-road-machine-road-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-diego-rivera1.jpg
+- name: christianity-christianity-under-construction-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-rainbow-festival.jpg
+- name: stories-art-museum-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-art-museum-dark-dali.jpg
+- name: old-gas-pumps-oldgaspumps-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-emily-carr.jpg
+- name: berlinwall2-berlinwall-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/berlinwall2-berlinwall-gred-mash.jpg
+- name: catacombs-catacombs-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-sunday.jpg
+- name: castle-wall-DSC-0067-sand-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-sand-paper.JPG
+- name: machine-road-machine-road-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-marcel-duchamp.jpg
+- name: white-house-whitehouse-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-hot-spicy.jpg
+- name: white-house-whitehouse-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-graham-sutherland.jpg
+- name: art-museum-art-museum-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-dali-two.jpg
+- name: containership-containership-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-clean-view.jpg
+- name: curtain-curtain-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-purple-storm.jpg
+- name: old-house-oldhouse-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-electricity.jpg
+- name: old-school-house-old-schoolhouse-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-dark-soul.jpg
+- name: white-house-lawn-white-house-lawn-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-attack-planes.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-blue-granite.jpg
+- name: hollywood-building-hollywood-building-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-purp-paper.jpg
+- name: old-school-house-old-schoolhouse-colorful-blocks.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-colorful-blocks.jpg
+- name: castle-wall-DSC-0067-smoking-cigarette.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-smoking-cigarette.JPG
+- name: old-cabin-oldcabin-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-blue-granite.jpg
+- name: subway-subway-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-yellow-paper.jpg
+- name: death-valley-death-valley-national-park-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-aqua.jpg
+- name: white-house-lawn-white-house-lawn-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-internet-numbers.jpg
+- name: mosaic-face-mosaic-face-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-blue-electricity.jpg
+- name: border-fence-border-fence-on-hill-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-dark-rain.jpg
+- name: nazi-invasion-statue-capital-cannon.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-capital-cannon.jpg
+- name: san-francisco-street-view-san-francisco-street-view-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-sunday.jpg
+- name: legal-statue-legalstatue-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-alien-goggles.jpg
+- name: adam-smith-adam-smith-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-propaganda-leaflets.jpg
+- name: bf-skinner-statue-of-liberty-back.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-statue-of-liberty-back.jpg
+- name: copper-circuit-cemetery_36690406946_o.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-cemetery_36690406946_o.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-nazi-poster.jpg
+- name: old-granary-field-granaryfield.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield.jpg
+- name: razorcliff-razorcliff-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-alien-goggles.jpg
+- name: nazi-invasion-DSC_0033.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0033.jpg
+- name: window-window-alberto-giacometti.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-alberto-giacometti.jpg
+- name: oldhouse-granaryfield-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-neo-instinct.jpg
+- name: dragon-desert-desert-dragon-propaganda-leaflets.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-propaganda-leaflets.jpg
+- name: statue-of-liberty-front-view-statueofliberty-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-satan-red.jpg
+- name: old-granary-field-granaryfield-purple-pond.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-purple-pond.jpg
+- name: server-cloud-server-racks-door-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-really-hot.jpg
+- name: lincoln-memorial-lincolnmemorial-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-blue-electricity.jpg
+- name: blossombar-aqua-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-aqua-file-00-00-24-99.jpg
+- name: nazi-invasion-DSC_0015.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0015.jpg
+- name: victoria-victoria-corner-hotel-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/victoria-victoria-corner-hotel-aqua.jpg
+- name: abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-00-00.jpg
+- name: mosaic-face-mosaic-face-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-hot-spicy.jpg
+- name: flower-barbed-wire-flower-barbed-wire-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-kandinsky-bv.jpg
+- name: hollywood-building-hollywood-building-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-post-modern.jpg
 ---
 Voters Have New Leeway On Sales Tax In Granite Shoals.&nbsp;Glen Martinez Memorial 5K Results Announced.&nbsp;Zion Williamson Returns To Practice, Raising Pelicans' Hopes.&nbsp;When Leasing A Car Is The More Frugal Option.&nbsp;Be Wary Of Charity Scams.&nbsp;Billy Turner's Positivity Has Been Contagious For Packers.&nbsp;As Jewish Enclaves Spring Up Around NYC, So Does Intolerance.&nbsp;Flint Hills Media Buys Clay Center Dispatch.&nbsp;
